# Dual-System-Parallel-Computing

./: README.md
2151105cyj_Client/: 2151105cyj_Client.sln
2151105cyj_Client/client/: client.cpp  client.vcxproj
2151105cyj_Client/client/x64/Release/: client.exe.recipe  client.iobj  client.ipdb
2151105cyj_Client/client/x64/Release/client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  client.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
2151105cyj_Server/: CMakeLists.txt  Server.cpp
